Fiquei testando aqui como levar o menu ao lado do logo, estou estudando isso. Precisa ver tbm a parte do js, pois qdo atualizamos a pagina o jQuery is not defined.

--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
-https://ffwagency.com/digital-services
+<!-- https://ffwagency.com/digital-services -->
 <!doctype html>
 <html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foundation | Welcome</title>
+    <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="./css/foundation.min.css" defer>
+    <style type="text/css">
+        .logo {
+            height: 250px
+        }
+    </style>
 </head>
 
 <body>
 
+    <!-- logo -->
+    <img src="./images/logo.jpg" alt="Logo do site" class="logo">
+
+
     <!-- Start Top Bar -->
-    <div class="top-bar">
-        <div class="top-bar-left">
-            <ul class="menu">
-                <li class="menu-text">Blog</li>
-                <li>
-                    <a href="#">One</a>
-                </li>
-                <li>
-                    <a href="#">Two</a>
-                </li>
-                <li>
-                    <a href="#">Three</a>
-                </li>
-            </ul>
+    <aside class="navegacao-site">
+        <div class="top-bar">
+            <nav>
+                <div class="top-bar-left">
+                    <ul class="menu">
+                        <li class="menu-text">Quem somos</li>
+                        <li>
+                            <a href="#">Dia-a-dia</a>
+                        </li>
+                        <li>
+                            <a href="#">Seja um doador</a>
+                        </li>
+                        <li>
+                            <a href="#">Loja</a>
+                        </li>
+                        <li>
+                            <a href="#"> Contato</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
         </div>
-    </div>
+    </aside>
     <!-- End Top Bar -->
+
 
     <div class="callout large primary">
         <div class="row column text-center">
@@ -128,8 +145,8 @@ https://ffwagency.com/digital-services
         </div>
     </div>
 
-    <script src="./jquery.min.js"></script>
-    <script src="./j/foundation.js"></script>
+    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/foundation.js"></script>
     <script>
         $(document).foundation();
     </script>
