--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- https://ffwagency.com/digital-services -->
 <!doctype html>
 <html class="no-js" lang="en">
 
@@ -7,26 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="./css/foundation.min.css" defer>
-    <style type="text/css">
-        .logo {
-            height: 250px
-        }
-    </style>
+    <link rel="stylesheet" href="./css/app.css" defer>
 </head>
 
 <body>
 
-    <!-- logo -->
-    <img src="./images/logo.jpg" alt="Logo do site" class="logo">
+    <!-- 
+            LINKS UTEIS!!!
+            https://foundation.zurb.com/sites/docs/xy-grid.html
+            Verificar o documento para entender como possuir as divs corretamente
 
+            https://ffwagency.com/digital-services
+        -->
 
-    <!-- Start Top Bar -->
-    <aside class="navegacao-site">
-        <div class="top-bar">
-            <nav>
+    <div class="grid-x">
+
+        <div class="small-3 cell">
+            <img src="./images/logo.jpg" alt="Associação Novo Rumo Atibaia" class="logo">
+        </div>
+
+        <div class="small-9 cell">
+            <div class="top-bar">
                 <div class="top-bar-left">
                     <ul class="menu">
-                        <li class="menu-text">Quem somos</li>
+                        <li>
+                            <a href="#">Quem somos</a>
+                        </li>
                         <li>
                             <a href="#">Dia-a-dia</a>
                         </li>
@@ -41,10 +46,10 @@
                         </li>
                     </ul>
                 </div>
-            </nav>
+            </div>
         </div>
-    </aside>
-    <!-- End Top Bar -->
+    </div>
+
 
 
     <div class="callout large primary">
@@ -145,7 +150,7 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="./js/jquery.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/foundation.js"></script>
     <script>
         $(document).foundation();
