Acrescentei ajuste e algumas infromações na index.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- 
             LINKS UTEIS!!!
             https://foundation.zurb.com/sites/docs/xy-grid.html
+            https://www.youtube.com/watch?v=tjjVKGeoi3A
             Verificar o documento para entender como possuir as divs corretamente
 
             https://ffwagency.com/digital-services
@@ -54,23 +55,27 @@
 
     <div class="callout large primary">
         <div class="row column text-center">
-            <h1>Our Blog</h1>
-            <h2 class="subheader">Such a Simple Blog Layout</h2>
+            <h1>Seja Bem vindo ao Novo Rumo Atibaia!</h1>
+            <!-- Podemos deixar fotos rolando aqui -->
+            <h2 class="subheader">Fotos</h2>
         </div>
     </div>
 
+    <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender adultos
+        e adolescentes com de dificiência intelectual, estimulando desta forma o potencial singular de cada pessoa, sempre
+        com atuando em conjunto as suas famílias. Para que desta forma, possamos dar a cada pessoa da nossa associação o
+        direito de viver, o direito da Inclusão Social. </p>
+
     <!-- We can now combine rows and columns when there's only one column in that row -->
-    <div class="grid-container">
+    <div class="grid-container align-center">
         <div class="blog-post">
-            <h3>Awesome blog post title
+            <h3 class="text-center">Eventos da Novo Rumo Atibaia
                 <small>3/6/2015</small>
             </h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec
-                congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac
-                lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-                luctus.
-            </p>
+            <div class="grid-x align-center-middle">
+                <img class="eventos" src="http://placehold.it/850x350">
+            </div>
+            <p class="text-center">texto.</p>
             <div class="callout">
                 <ul class="menu simple">
                     <li>
@@ -84,15 +89,12 @@
         </div>
 
         <div class="blog-post">
-            <h3>Awesome blog post title
-                <small>3/6/2015</small>
-            </h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec
-                congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac
-                lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-                luctus.
-            </p>
+            <h3 class="text-center">Nosso Dia-a-Dia</h3>
+
+            <div class="grid-x align-center">
+                <img class="thumbnail" src="http://placehold.it/850x350">
+            </div>
+            <p class="text-center">Conheça o Dia--Dia da nossa Associação!</p>
             <div class="callout">
                 <ul class="menu simple">
                     <li>
@@ -106,15 +108,12 @@
         </div>
 
         <div class="blog-post">
-            <h3>Awesome blog post title
+            <h3 class="text-center">Seja um doador!
                 <small>3/6/2015</small>
             </h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec
-                congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac
-                lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-                luctus.
-            </p>
+            <div class="grid-x align-center">
+                <img class="thumbnail" src="http://placehold.it/850x350">
+            </div>
             <div class="callout">
                 <ul class="menu simple">
                     <li>
@@ -128,15 +127,13 @@
         </div>
 
         <div class="blog-post">
-            <h3>Awesome blog post title
+            <h3 class="text-center">Nossa Loja!
                 <small>3/6/2015</small>
             </h3>
-            <img class="thumbnail" src="http://placehold.it/850x350">
-            <p>Praesent id metus massa, ut blandit odio. Proin quis tortor orci. Etiam at risus et justo dignissim congue. Donec
-                congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget odio ac
-                lectus vestibulum faucibus eget in metus. In pellentesque faucibus vestibulum. Nulla at nulla justo, eget
-                luctus.
-            </p>
+            <div class="grid-x align-center">
+                <img class="thumbnail" src="http://placehold.it/850x350">
+            </div>
+
             <div class="callout">
                 <ul class="menu simple">
                     <li>
