--- a/web/index.html
+++ b/web/index.html
@@ -6,92 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="./css/foundation.min.css" defer>
-    <link rel="stylesheet" href="./css/app.css" defer>
+    <link rel="stylesheet" href="./css/app.css">
 </head>
 
 <body>
+    <!--https://ffwagency.com/digital-services-->
+    <div class="hero-full-screen">
 
-    <!-- 
-            LINKS UTEIS!!!
-            https://foundation.zurb.com/sites/docs/xy-grid.html
-            https://www.youtube.com/watch?v=tjjVKGeoi3A
-            Verificar o documento para entender como possuir as divs corretamente
+        <div class="top-content-section">
+            <div class="top-bar">
+                <div class="top-bar-left">
+                    <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
+                </div>
 
-            https://ffwagency.com/digital-services
-        -->
-
-
-    <div class="top-bar">
-        <div class="top-bar-left">
-            <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
+                <div class="top-bar-right">
+                    <ul class="menu float-left">
+                        <li>
+                            <a href="#">Quem somos</a>
+                        </li>
+                        <li>
+                            <a href="#">Dia-a-dia</a>
+                        </li>
+                        <li>
+                            <a href="#">Seja um doador</a>
+                        </li>
+                        <li>
+                            <a href="#">Loja</a>
+                        </li>
+                        <li>
+                            <a href="#"> Contato</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
-        <div class="top-bar-right">
-            <ul class="menu float-left">
-                <li>
-                    <a href="#">Quem somos</a>
-                </li>
-                <li>
-                    <a href="#">Dia-a-dia</a>
-                </li>
-                <li>
-                    <a href="#">Seja um doador</a>
-                </li>
-                <li>
-                    <a href="#">Loja</a>
-                </li>
-                <li>
-                    <a href="#"> Contato</a>
-                </li>
-            </ul>
+        <div class="middle-content-section">
+            <h1>Associação Novo Rumo</h1>
+        </div>
+
+        <div class="bottom-content-section" data-magellan data-threshold="1">
+            <a href="#main-content-section">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"
+                    />
+                </svg>
+            </a>
         </div>
     </div>
 
-    <div class="callout large primary">
-        <div class="row column text-center">
-            <h2 class="subheader">Associação</h2>
-            <h1>Novo Rumo Atibaia</h1>
+    <div id="main-content-section">
+        <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender
+            adultos e adolescentes com de dificiência intelectual, estimulando desta forma o potencial singular de cada pessoa,
+            sempre com atuando em conjunto as suas famílias. Para que desta forma, possamos dar a cada pessoa da nossa associação
+            o direito de viver, o direito da Inclusão Social. </p>
+
+        <div class="grid-container align-center">
+            <div class="blog-post">
+                <h3 class="text-center">Saiba mais sobre o que fazemos:</h3>
+                <div class="grid-x align-center-middle">
+                    <img class="eventos" src="http://placehold.it/850x350">
+                </div>
+            </div>
+
+            <div class="blog-post">
+                <h3 class="text-center">Nosso Dia-a-Dia</h3>
+
+                <div class="grid-x align-center">
+                    <img class="thumbnail" src="http://placehold.it/850x350">
+                </div>
+                <p class="text-center">Conheça o Dia--Dia da nossa Associação!</p>
+            </div>
+
+            <div class="blog-post">
+                <h3 class="text-center">Seja um doador!</h3>
+                <div class="grid-x align-center">
+                    <img class="thumbnail" src="http://placehold.it/850x350">
+                </div>
+            </div>
+
+            <div class="blog-post">
+                <h3 class="text-center">Nossa Loja!</h3>
+                <div class="grid-x align-center">
+                    <img class="thumbnail" src="http://placehold.it/850x350">
+                </div>
+
+            </div>
         </div>
     </div>
 
-    <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender adultos
-        e adolescentes com de dificiência intelectual, estimulando desta forma o potencial singular de cada pessoa, sempre
-        com atuando em conjunto as suas famílias. Para que desta forma, possamos dar a cada pessoa da nossa associação o
-        direito de viver, o direito da Inclusão Social. </p>
-
-    <div class="grid-container align-center">
-        <div class="blog-post">
-            <h3 class="text-center">Saiba mais sobre o que fazemos:</h3>
-            <div class="grid-x align-center-middle">
-                <img class="eventos" src="http://placehold.it/850x350">
-            </div>
-        </div>
-
-        <div class="blog-post">
-            <h3 class="text-center">Nosso Dia-a-Dia</h3>
-
-            <div class="grid-x align-center">
-                <img class="thumbnail" src="http://placehold.it/850x350">
-            </div>
-            <p class="text-center">Conheça o Dia--Dia da nossa Associação!</p>
-        </div>
-
-        <div class="blog-post">
-            <h3 class="text-center">Seja um doador!</h3>
-            <div class="grid-x align-center">
-                <img class="thumbnail" src="http://placehold.it/850x350">
-            </div>
-        </div>
-
-        <div class="blog-post">
-            <h3 class="text-center">Nossa Loja!</h3>
-            <div class="grid-x align-center">
-                <img class="thumbnail" src="http://placehold.it/850x350">
-            </div>
-
-        </div>
-    </div>
-
+    
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/foundation.js"></script>
     <script>
