--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,7 @@
 </head>
 
 <body>
-    <!--https://ffwagency.com/digital-services-->
     <div class="hero-full-screen">
-
         <div class="top-content-section">
             <div class="top-bar">
                 <div class="top-bar-left">
@@ -65,37 +63,63 @@
             <div class="blog-post">
                 <h3 class="text-center">Saiba mais sobre o que fazemos:</h3>
                 <div class="grid-x align-center-middle">
-                    <img class="eventos" src="http://placehold.it/850x350">
+                    <img src="http://placehold.it/850x350">
                 </div>
             </div>
 
             <div class="blog-post">
                 <h3 class="text-center">Nosso Dia-a-Dia</h3>
 
-                <div class="grid-x align-center">
-                    <img class="thumbnail" src="http://placehold.it/850x350">
+                <div class="grid-x align-center-middle">
+                    <img src="http://placehold.it/850x350">
                 </div>
                 <p class="text-center">Conheça o Dia--Dia da nossa Associação!</p>
             </div>
 
             <div class="blog-post">
                 <h3 class="text-center">Seja um doador!</h3>
-                <div class="grid-x align-center">
-                    <img class="thumbnail" src="http://placehold.it/850x350">
+                <div class="grid-x align-center-middle">
+                    <img src="http://placehold.it/850x350">
                 </div>
             </div>
 
             <div class="blog-post">
                 <h3 class="text-center">Nossa Loja!</h3>
-                <div class="grid-x align-center">
-                    <img class="thumbnail" src="http://placehold.it/850x350">
+                <div class="grid-x align-center-middle">
+                    <img src="http://placehold.it/850x350">
                 </div>
 
             </div>
         </div>
     </div>
 
-    
+
+    <div class="grid-x grid-padding-x footer footer-details">
+        <div class="small-6 cell">
+            <h4>Conheça a Novo Rumo</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu sagittis felis. Etiam ante dui, iaculis vel augue
+                et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu leo elementum, sagittis
+                massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
+        </div>
+        <div class="small-6 cell">
+            <h4>Curta-nos!</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu sagittis felis. Etiam ante dui, iaculis vel augue
+                et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu leo elementum, sagittis
+                massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
+        </div>
+    </div>
+    <div class="grid-padding-x footer footer-info">
+        <div class="cell footer-left">
+            <div class="contact-details">
+                <p>2017 Associação Novo Rumo criado com carinho por
+                    <a href="http://victorfontana.com.br">Victor Fontana</a>
+                </p>
+            </div>
+        </div>
+    </div>
+
     <script type="text/javascript" src="./js/jquery.js"></script>
     <script type="text/javascript" src="./js/foundation.js"></script>
     <script>
