--- a/web/index.html
+++ b/web/index.html
@@ -54,8 +54,7 @@
     </div>
 
     <div id="main-content-section">
-        <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender
-            adultos e adolescentes com de dificiência intelectual, estimulando desta forma o potencial singular de cada pessoa,
+        <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender ....., estimulando desta forma o potencial singular de cada pessoa,
             sempre com atuando em conjunto as suas famílias. Para que desta forma, possamos dar a cada pessoa da nossa associação
             o direito de viver, o direito da Inclusão Social. </p>
 
