--- a/web/index.html
+++ b/web/index.html
@@ -96,10 +96,17 @@
     <div class="grid-x grid-padding-x footer footer-details">
         <div class="small-6 cell">
             <h4>Conheça a Novo Rumo</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu sagittis felis. Etiam ante dui, iaculis vel augue
-                et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu leo elementum, sagittis
-                massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
+              <div class="small-6 cell">
+                  <h5>Endereço</h5>
+                  <p>Rua capetinha casa vermelha n°6</p>
+                  
+              </div>
+              <div class="small-6 cell">
+                  <h5>Contato</h5>
+                  <p>Associacao@novorumo.com.br</p>
+                  <p>(11)6666-666</p>
+              </div>
+
         </div>
         <div class="small-6 cell">
             <h4>Curta-nos!</h4>
