--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
-    <link rel="stylesheet" href="./css/foundation.min.css" defer>
-    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./css/foundation.min.css">
+    <link rel="stylesheet" href="./css/app.css" async>
+    <link rel="stylesheet" href="./css/app-effects.css" async>
 </head>
 
 <body>
