--- a/web/index.html
+++ b/web/index.html
@@ -97,13 +97,13 @@
     <div class="grid-x grid-padding-x footer footer-details">
         <div class="small-6 cell">
             <h4>Conheça a Novo Rumo</h4>
-              <div class="small-6 cell">
-                  <h5>Endereço</h5>
+              <div class="info">
+                  <p><b>Endereço</b></p>
                   <p>Rua capetinha casa vermelha n°6</p>
                   
               </div>
-              <div class="small-6 cell">
-                  <h5>Contato</h5>
+              <div class="info">
+                  <p><b>Contato</b></p>
                   <p>Associacao@novorumo.com.br</p>
                   <p>(11)6666-666</p>
               </div>
