--- a/web/index.html
+++ b/web/index.html
@@ -55,40 +55,24 @@
     </div>
 
     <div id="main-content-section">
-        <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender ....., estimulando desta forma o potencial singular de cada pessoa,
-            sempre com atuando em conjunto as suas famílias. Para que desta forma, possamos dar a cada pessoa da nossa associação
-            o direito de viver, o direito da Inclusão Social. </p>
+        <div>
+            <h2>Quem somos</h2>
+            <p class="text-center">Associação Novo Rumo Atibaia, Vivência Social e Cultural para Pessoas com Deficiência. Tendo como objetivo atender
+                ....., estimulando desta forma o potencial singular de cada pessoa, sempre com atuando em conjunto as suas
+                famílias. Para que desta forma, possamos dar a cada pessoa da nossa associação o direito de viver, o direito
+                da Inclusão Social. </p>
+        </div>
 
-        <div class="grid-container align-center">
-            <div class="blog-post">
-                <h3 class="text-center">Saiba mais sobre o que fazemos:</h3>
-                <div class="grid-x align-center-middle">
-                    <img src="http://placehold.it/850x350">
-                </div>
-            </div>
+        <div>
+            <h2>Produtos</h2>
+            <!-- TODO: Exibir 3 produtos e botão para visualizar mais -->
+        </div>
 
-            <div class="blog-post">
-                <h3 class="text-center">Nosso Dia-a-Dia</h3>
+        <div>
+            <h2>Nosso Dia-a-Dia</h2>
 
-                <div class="grid-x align-center-middle">
-                    <img src="http://placehold.it/850x350">
-                </div>
-                <p class="text-center">Conheça o Dia--Dia da nossa Associação!</p>
-            </div>
-
-            <div class="blog-post">
-                <h3 class="text-center">Seja um doador!</h3>
-                <div class="grid-x align-center-middle">
-                    <img src="http://placehold.it/850x350">
-                </div>
-            </div>
-
-            <div class="blog-post">
-                <h3 class="text-center">Nossa Loja!</h3>
-                <div class="grid-x align-center-middle">
-                    <img src="http://placehold.it/850x350">
-                </div>
-
+            <div class="grid-x align-center-middle">
+                <img src="http://placehold.it/850x350">
             </div>
         </div>
     </div>
@@ -97,16 +81,20 @@
     <div class="grid-x grid-padding-x footer footer-details">
         <div class="small-6 cell">
             <h4>Conheça a Novo Rumo</h4>
-              <div class="info">
-                  <p><b>Endereço</b></p>
-                  <p>Rua capetinha casa vermelha n°6</p>
-                  
-              </div>
-              <div class="info">
-                  <p><b>Contato</b></p>
-                  <p>Associacao@novorumo.com.br</p>
-                  <p>(11)6666-666</p>
-              </div>
+            <div class="info">
+                <p>
+                    <b>Endereço</b>
+                </p>
+                <p>Rua capetinha casa vermelha n°6</p>
+
+            </div>
+            <div class="info">
+                <p>
+                    <b>Contato</b>
+                </p>
+                <p>Associacao@novorumo.com.br</p>
+                <p>(11)6666-666</p>
+            </div>
 
         </div>
         <div class="small-6 cell">
