--- a/web/index.html
+++ b/web/index.html
@@ -70,7 +70,7 @@
 
         <div>
             <h2>Nosso Dia-a-Dia</h2>
-
+            <!-- TODO: Exibir 3 noticias e botão para visualizar mais -->
             <div class="grid-x align-center-middle">
                 <img src="http://placehold.it/850x350">
             </div>
