ajuste nas imagens

--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
                 <h2>Produtos</h2>
                 <!-- TODO: Exibir 3 produtos e botão para visualizar mais -->
                 <div> 
-                    <img src="C:\Users\leonardo ines\Documents\Projetos\novo-rumo-template\web\images\artesanal.jpg" alt="Casa artesanal">
+                    <img src=".\images\artesanal.jpg" alt="Casa artesanal">
                 </div>
                 <div>
                     <a href="Loja">
@@ -81,7 +81,7 @@
                 <h2>Nosso Dia-a-Dia</h2>
                 <!-- TODO: Exibir 3 noticias e botão para visualizar mais -->
                 <div> 
-                    <img src="C:\Users\leonardo ines\Documents\Projetos\novo-rumo-template\web\images\artesanal.jpg" alt="Noticias">
+                    <img src=".\images\artesanal.jpg" alt="Noticias">
                 </div>
                 <div>
                     <a href="Dia-a-dia">
