--- a/web/index.html
+++ b/web/index.html
@@ -113,7 +113,7 @@
                         <div class="content">
                             <h3>Evento Bazar Natalino</h3> 
                         </div>                         
-                            <p>"Venha conferir mais um de nossos eventos, com muita comida e produtos artesanais feitos com qualidade e carinho..."</p>                        
+                        <p>"Venha conferir mais um de nossos eventos, com muita comida e produtos artesanais feitos com qualidade e carinho..."</p>                        
                         <div>
                             <a href="Dia-a-dia.html" class="button">Ver Mais</a>
                         </div>
@@ -125,7 +125,10 @@
                         <div class="content">
                             <h3>Poesia e Dança</h3> 
                         </div>                     
-                            <p>"Muita alegria e entretenimento com peosias e dança..."</p>                        
+                        <p>"Muita alegria e entretenimento com peosias e dança..."</p>
+                        <div>
+                            <a href="Dia-a-dia.html" class="button">Ver Mais</a>
+                        </div>                            
                     </div>
                     <div class="medium-4 large-4 small-12 cell">
                         <div>
@@ -134,7 +137,7 @@
                         <div class="content">
                             <h3>Expedições</h3> 
                         </div>
-                            <p>"Explorar e conhecer lugares incríveis..."</p>                     
+                        <p>"Explorar e conhecer lugares incríveis..."</p>                     
                         <div>
                             <a href="Dia-a-dia.html" class="button">Ver Mais</a>
                         </div>
