--- a/web/index.html
+++ b/web/index.html
@@ -64,83 +64,78 @@
                 da Inclusão Social. </p>
         </div>
 
-        <div>
-            <div class="grid-x grid-padding-x align-center">
-                <h2>Produtos</h2>
+        <div class="grid-x grid-padding-x align-center">
+            <h2>Produtos</h2>
+        </div>
+        <div class="grid-x grid-padding-x text-center">
+            <div class="medium-4 large-4 small-12 cell">
+                <div>
+                    <img src=".\images\artesanal3.jpg" alt="Casa artesanal">
+                </div>
+                <p>Carteiras e caixas a partir de R$15,00</p>
+                <div>
+                    <a href="/produto/granola" class="button">Comprar</a>
+                </div>
             </div>
-            <div class="grid-x grid-padding-x align-center">
-                <div class="medium-4 large-4 small-12 cell">
-                    <div>
-                        <img src=".\images\artesanal3.jpg" alt="Casa artesanal">
-                    </div>
-                    <p>Carteiras e caixas a partir de R$15,00</p>
-                    <div>
-                        <a href="/produto/granola" class="button">Comprar</a>
-                    </div>
+            <div class="medium-4 large-4 small-12 cell">
+                <div>
+                    <img src=".\images\produto.jpg" alt="Casa artesanal">
                 </div>
-                <div class="medium-4 large-4 small-12 cell">
-                    <div>
-                        <img src=".\images\produto.jpg" alt="Casa artesanal">
-                    </div>
-                    <p>Pratos e xícaras a partir de R$10,00</p>
-                    <div>
-                        <a href="/produto/granola" class="button">Comprar</a>
-                    </div>
+                <p>Pratos e xícaras a partir de R$10,00</p>
+                <div>
+                    <a href="/produto/granola" class="button">Comprar</a>
                 </div>
-                <div class="medium-4 large-4 small-12 cell">
-                    <div>
-                        <img src=".\images\granola.jpg" alt="Casa artesanal">
-                    </div>
-                    <p>Granolas a partir de R$5,00</p>
-                    <div>
-                        <a href="/produto/granola" class="button">Comprar</a>
-                    </div>
+            </div>
+            <div class="medium-4 large-4 small-12 cell">
+                <div>
+                    <img src=".\images\granola.jpg" alt="Casa artesanal">
+                </div>
+                <p>Granolas a partir de R$5,00</p>
+                <div>
+                    <a href="/produto/granola" class="button">Comprar</a>
                 </div>
             </div>
         </div>
 
-        <div>
-            <div class="grid-x grid-padding-x align-center">
-                <h2>Nosso Dia-a-Dia</h2>
+        <div class="grid-x grid-padding-x align-center">
+            <h2>Nosso Dia-a-Dia</h2>
+        </div>
+        <div class="grid-x grid-padding-x text-center">
+            <div class="medium-4 large-4 small-12 cell">
+                <div>
+                    <img src=".\images\noticia3.jpg" alt="Noticias">
+                </div>
+                <div class="content">
+                    <h3>Evento Bazar Natalino</h3>
+                </div>
+                <p>"Venha conferir mais um de nossos eventos, com muita comida e produtos artesanais feitos com qualidade e
+                    carinho..."</p>
+                <div>
+                    <a href="Dia-a-dia.html" class="button">Ver Mais</a>
+                </div>
             </div>
-
-            <div class="grid-x grid-padding-x align-center">
-                <div class="medium-4 large-4 small-12 cell">
-                    <div>
-                        <img src=".\images\noticia3.jpg" alt="Noticias">
-                    </div>
-                    <div class="content">
-                        <h3>Evento Bazar Natalino</h3>
-                    </div>
-                    <p>"Venha conferir mais um de nossos eventos, com muita comida e produtos artesanais feitos com qualidade
-                        e carinho..."</p>
-                    <div>
-                        <a href="Dia-a-dia.html" class="button">Ver Mais</a>
-                    </div>
+            <div class="medium-4 large-4 small-12 cell">
+                <div>
+                    <img src=".\images\noticia.jpg" alt="Noticias">
                 </div>
-                <div class="medium-4 large-4 small-12 cell">
-                    <div>
-                        <img src=".\images\noticia.jpg" alt="Noticias">
-                    </div>
-                    <div class="content">
-                        <h3>Poesia e Dança</h3>
-                    </div>
-                    <p>"Muita alegria e entretenimento com peosias e dança..."</p>
-                    <div>
-                        <a href="Dia-a-dia.html" class="button">Ver Mais</a>
-                    </div>
+                <div class="content">
+                    <h3>Poesia e Dança</h3>
                 </div>
-                <div class="medium-4 large-4 small-12 cell">
-                    <div>
-                        <img src=".\images\noticia2.jpg" alt="Noticias">
-                    </div>
-                    <div class="content">
-                        <h3>Expedições</h3>
-                    </div>
-                    <p>"Explorar e conhecer lugares incríveis..."</p>
-                    <div>
-                        <a href="Dia-a-dia.html" class="button">Ver Mais</a>
-                    </div>
+                <p>"Muita alegria e entretenimento com peosias e dança..."</p>
+                <div>
+                    <a href="Dia-a-dia.html" class="button">Ver Mais</a>
+                </div>
+            </div>
+            <div class="medium-4 large-4 small-12 cell">
+                <div>
+                    <img src=".\images\noticia2.jpg" alt="Noticias">
+                </div>
+                <div class="content">
+                    <h3>Expedições</h3>
+                </div>
+                <p>"Explorar e conhecer lugares incríveis..."</p>
+                <div>
+                    <a href="Dia-a-dia.html" class="button">Ver Mais</a>
                 </div>
             </div>
         </div>
