--- a/web/index.html
+++ b/web/index.html
@@ -88,7 +88,7 @@
                         <div>
                             <a href="/produto/granola" class="button">Comprar</a>
                         </div>
-                        <div>
+                        <div class="medium-4 large-4 small-12 cell">
                             <p>Pratos e xícaras a partir de R$10,00</p>
                         </div>
                     </div> 
@@ -101,7 +101,7 @@
                         <div>
                             <a href="/produto/granola" class="button">Comprar</a>
                         </div>
-                        <div>
+                        <div class="medium-4 large-4 small-12 cell">
                             <p>Granolas a partir de R$5,00</p>
                         </div>
                     </div>
