--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="./css/foundation.min.css">
     <link rel="stylesheet" href="./css/app-effects.css" async>
+    <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet">
     <link rel="stylesheet" href="./css/app.css" async>
 </head>
 
@@ -40,9 +41,9 @@
             </div>
         </div>
         
-        <div class="middle-content-section">
-            <h1>Associação Novo Rumo</h1>
-            <p>Vivência Social e Cultural para Pessoas com Deficiência</p>
+        <div class="middle-content-section ">
+            <h1 class="titulo-principal">Associação Novo Rumo</h1>
+            <p class="titulo-principal">Vivência Social e Cultural para Pessoas com Deficiência</p>
         </div>
         
         <div class="bottom-content-section" data-magellan data-threshold="1">
