--- a/web/index.html
+++ b/web/index.html
@@ -66,60 +66,68 @@
         </div>
         <hr>
 
+        <!-- PRODUTOS -->
         <div class="grid-x grid-padding-x align-center">
             <h2 class="topicos">Produtos</h2>
         </div>
         <div class="grid-x grid-padding-x text-center">
-            <div class="medium-4 large-4 small-12 cell">
-                <div class="foto-produtos">
-                    <img src=".\images\artesanal3.jpg" alt="Casa artesanal">
-                </div>
+            <div class="medium-4 large-4 small-12 cell product-grid">
+                <figure class="product-image">
+                    <a>
+                        <img src=".\images\artesanal3.jpg" alt="Casa artesanal">
+                    </a>
+                </figure>
                 <div class="grid-x align-center">
-                    <p>Carteiras e caixas</p>
+                    <h1>Carteiras e caixas</h1>
                 </div>
                 <div class="grid-x align-center">
                     <div>
                         <a href="/produto/granola" class="button">Comprar</a>
                     </div>
                     <div class="medium-4 large-4 small-12 cell">
-                        <p>$15,00</p>
+                        <span class="value">R$15,00</span>
                     </div>
                 </div>
             </div>
-            <div class="medium-4 large-4 small-12 cell">
-                <div class="foto-produtos">
-                    <img src=".\images\produto.jpg" alt="Casa artesanal">
-                </div>
+            <div class="medium-4 large-4 small-12 cell product-grid">
+                <figure class="product-image">
+                    <a>
+                        <img src=".\images\produto.jpg" alt="Casa artesanal">
+                    </a>
+                </figure>
                 <div class="grid-x align-center">
-                    <p>Pratos e xícaras</p>
+                    <h1>Pratos e xícaras</h1>
                 </div>
                 <div class="grid-x align-center">
                     <div>
                         <a href="/produto/granola" class="button">Comprar</a>
                     </div>
                     <div class="medium-4 large-4 small-12 cell">
-                        <p>R$10,00</p>
+                        <span class="value">R$15,00</span>
                     </div>
                 </div>
             </div>
-            <div class="medium-4 large-4 small-12 cell">
-                <div class="foto-produtos">
-                    <img src=".\images\granola.jpg" alt="Casa artesanal">
-                </div>
+            <div class="medium-4 large-4 small-12 cell product-grid">
+                <figure class="product-image">
+                    <a>
+                        <img src=".\images\granola.jpg" alt="Casa artesanal">
+                    </a>
+                </figure>
                 <div class="grid-x align-center">
-                    <p>Granolas</p>
+                    <h1>Granolas</h1>
                 </div>
                 <div class="grid-x align-center">
                     <div>
                         <a href="/produto/granola" class="button">Comprar</a>
                     </div>
                     <div class="medium-4 large-4 small-12 cell">
-                        <p>R$5,00</p>
+                        <span class="value">R$15,00</span>
                     </div>
                 </div>
             </div>
         </div>
 
+        <!-- NOSSO DIA-A-DIA -->
         <div class="grid-x grid-padding-x align-center">
             <h2 class="topicos">Nosso Dia-a-Dia</h2>
         </div>
