--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="grid-x grid-padding-x text-center">
             <div class="medium-4 large-4 small-12 cell product-grid">
-                <figure class="product-image">
+                <figure>
                     <a>
                         <img src=".\images\artesanal3.jpg" alt="Casa artesanal">
                     </a>
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="medium-4 large-4 small-12 cell product-grid">
-                <figure class="product-image">
+                <figure>
                     <a>
                         <img src=".\images\produto.jpg" alt="Casa artesanal">
                     </a>
@@ -108,7 +108,7 @@
                 </div>
             </div>
             <div class="medium-4 large-4 small-12 cell product-grid">
-                <figure class="product-image">
+                <figure>
                     <a>
                         <img src=".\images\granola.jpg" alt="Casa artesanal">
                     </a>
