--- a/web/index.html
+++ b/web/index.html
@@ -131,13 +131,15 @@
         <div class="grid-x grid-padding-x align-center">
             <h2 class="topicos">Nosso Dia-a-Dia</h2>
         </div>
-        <div class="grid-x grid-padding-x text-center">
+        <div class="grid-x grid-padding-x text-center daily-grid">
             <div class="medium-4 large-4 small-12 cell">
-                <div class="foto-produtos">
-                    <img src=".\images\noticia3.jpg" alt="Noticias">
-                </div>
+                <figure>
+                    <a>
+                        <img src=".\images\noticia3.jpg" alt="Noticias">
+                    </a>
+                </figure>
                 <div class="content">
-                    <h5>Evento Bazar Natalino</h5>
+                    <h1>Evento Bazar Natalino</h1>
                 </div>
                 <p>"Venha conferir mais um de nossos eventos, com muita comida e produtos artesanais feitos com qualidade e
                     carinho..."
@@ -149,9 +151,11 @@
                 </div>
             </div>
             <div class="medium-4 large-4 small-12 cell">
-                <div class="foto-produtos">
-                    <img src=".\images\noticia.jpg" alt="Noticias">
-                </div>
+                <figure>
+                    <a>
+                        <img src=".\images\noticia.jpg" alt="Noticias">
+                    </a>
+                </figure>
                 <div class="content">
                     <h5>Poesia e Dança</h5>
                 </div>
@@ -163,9 +167,11 @@
                 </div>
             </div>
             <div class="medium-4 large-4 small-12 cell">
-                <div class="foto-produtos">
-                    <img src=".\images\noticia2.jpg" alt="Noticias">
-                </div>
+                <figure>
+                    <a>
+                        <img src=".\images\noticia2.jpg" alt="Noticias">
+                    </a>
+                </figure>
                 <div class="content">
                     <h5>Expedições</h5>
                 </div>
