Criando View Contato CSS e HTML

--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
                             <a href="#">Loja</a>
                         </li>
                         <li>
-                            <a href="#"> Contato</a>
+                            <a href=".\views\contato.html"> Contato</a>
                         </li>
                     </ul>
                 </div>
