--- a/web/index.html
+++ b/web/index.html
@@ -16,16 +16,19 @@
         <div class="top-content-section">
             <div class="top-bar">
                 <div class="top-bar-left">
-                    <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
+                    <a href="\index.html" rel="home">
+                        
+                        <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
+                    </a> 
                 </div>
                 
                 <div class="top-bar-right">
                     <ul class="menu float-left">
                         <li>
-                            <a href="#">Quem somos</a>
+                            <a href=".\views\quem-somos.html">Quem somos</a>
                         </li>
                         <li>
-                            <a href="#">Dia-a-dia</a>
+                            <a href=".\views\dia-a-dia.html">Dia-a-dia</a>
                         </li>
                         <li>
                             <a href="#">Seja um doador</a>
@@ -148,7 +151,7 @@
                         carinho..."
                     </p>
                     <div>
-                        <a href="Dia-a-dia.html">
+                        <a href=".\views\dia-a-dia.html">
                             <strong>ver mais</strong>
                         </a>
                     </div>
@@ -164,7 +167,7 @@
                     </div>
                     <p>"Muita alegria e entretenimento com peosias e dança..."</p>
                     <div>
-                        <a href="Dia-a-dia.html">
+                        <a href=".\views\dia-a-dia.html">
                             <strong>ver mais</strong>
                         </a>
                     </div>
@@ -180,7 +183,7 @@
                     </div>
                     <p>"Explorar e conhecer lugares incríveis..."</p>
                     <div>
-                        <a href="Dia-a-dia.html">
+                        <a href=".\views\dia-a-dia.html">
                             <strong>ver mais</strong>
                         </a>
                     </div>
