--- a/web/index.html
+++ b/web/index.html
@@ -31,10 +31,10 @@
                             <a href=".\views\dia-a-dia.html">Dia-a-dia</a>
                         </li>
                         <li>
-                            <a href="#">Seja um doador</a>
+                            <a href=".\views\seja-doador.html">Seja um doador</a>
                         </li>
                         <li>
-                            <a href="#">Loja</a>
+                            <a href=".\views\loja.html">Loja</a>
                         </li>
                         <li>
                             <a href=".\views\contato.html"> Contato</a>
