--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
-    <link rel="stylesheet" href="./css/foundation.min.css">
+    <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="./css/app-effects.css" async>
     <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet" async>
-    <link rel="stylesheet" href="./css/app.css" async>
 </head>
 
 <body>
