--- a/web/index.html
+++ b/web/index.html
@@ -11,183 +11,39 @@
 </head>
 
 <body>
-    <div class="hero-full-screen">
-        <div class="top-content-section">
-            <div class="top-bar">
-                <div class="top-bar-left">
-                    <a href="\index.html" rel="home">
+    <header id="header" class="topbar-sticky-shrink-header">
+    </header>
 
-                        <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
-                    </a>
-                </div>
-
-                <div class="top-bar-right">
-                    <ul class="menu float-left">
+    <div data-sticky-container>
+        <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
+            <div class="top-bar topbar-sticky-shrink">
+                <div class="top-bar-center">
+                    <ul class="menu">
                         <li>
-                            <a href=".\views\quem-somos.html">Quem somos</a>
+                            <a href="views/quem-somos.html">Quem somos</a>
                         </li>
                         <li>
-                            <a href=".\views\dia-a-dia.html">Dia-a-dia</a>
+                            <a href="#">Seja um doador</a>
                         </li>
                         <li>
-                            <a href=".\views\seja-doador.html">Seja um doador</a>
+                            <a href="#">Eventos</a>
                         </li>
                         <li>
-                            <a href=".\views\loja.html">Loja</a>
+                            <a href="views/loja.html">Loja</a>
                         </li>
                         <li>
-                            <a href=".\views\contato.html"> Contato</a>
+                            <a href="views/contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-
-        <div class="middle-content-section">
-            <h1>Associação Novo Rumo</h1>
-            <p>Vivência Social e Cultural para Pessoas com Deficiência</p>
-        </div>
-
-        <div class="bottom-content-section" data-magellan data-threshold="1">
-            <a href="#main-content-section">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path d="M24 12c0-6.627-5.373-12-12-12s-12 5.373-12 12 5.373 12 12 12 12-5.373 12-12zm-18.005-1.568l1.415-1.414 4.59 4.574 4.579-4.574 1.416 1.414-5.995 5.988-6.005-5.988z"
-                    />
-                </svg>
-            </a>
-        </div>
     </div>
 
-    <div id="main-content-section grid-container">
-        <div class="grid-x grid-padding-x align-center">
-            <h2>Quem somos</h2>
-            <h6>
-                <p>Associação Novo Rumo Atibaia - Centro de Convivência Sócio-Cultural para pessoas com deficiência, que, desde
-                    uma perspectiva holística, integral, objetiva a promoção da Qualidade de Vida biopsicossocial de pessoas
-                    especiais, a partir do estímulo do potencial singular de cada individuo. Potencializando suas vivências
-                    de acordo com suas diferenças, aptidões e sonhos! Atendimento personalizado integrado a família e a sociedade.
-                    Sua Qualidade de Vida a distância de um sim! Participe!</p>
-            </h6>
-        </div>
-        <hr>
-
-        <!-- PRODUTOS -->
-        <div class="grid-x grid-padding-x align-center">
-            <h2 class="topicos">Produtos</h2>
-        </div>
-        <div class="grid-x grid-padding-x text-center">
-            <div class="medium-4 large-4 small-12 cell product-grid">
-                <figure>
-                    <a>
-                        <img src=".\images\artesanal3.jpg" alt="Casa artesanal">
-                    </a>
-                </figure>
-                <div class="grid-x align-center">
-                    <h1>Carteiras e caixas</h1>
-                </div>
-                <div class="grid-x align-center">
-                    <div class="medium-4 large-4 small-12 cell">
-                        <span class="value">R$15,00</span>
-                    </div>
-                </div>
-                <div>
-                    <a href="/produto/granola" class="button btn">Comprar</a>
-                </div>
-
-            </div>
-            <div class="medium-4 large-4 small-12 cell product-grid">
-                <figure>
-                    <a>
-                        <img src=".\images\produto.jpg" alt="Casa artesanal">
-                    </a>
-                </figure>
-                <div class="grid-x align-center">
-                    <h1>Pratos e xícaras</h1>
-                </div>
-                <div class="grid-x align-center">
-
-                    <div class="medium-4 large-4 small-12 cell">
-                        <span class="value">R$15,00</span>
-                    </div>
-                </div>
-                <div>
-                    <a href="/produto/granola" class="button btn">Comprar</a>
-                </div>
-            </div>
-            <div class="medium-4 large-4 small-12 cell product-grid">
-                <figure>
-                    <a>
-                        <img src=".\images\granola.jpg" alt="Casa artesanal">
-                    </a>
-                </figure>
-                <div class="grid-x align-center">
-                    <h1>Granolas</h1>
-                </div>
-                <div class="grid-x align-center">
-                    <div class="medium-4 large-4 small-12 cell">
-                        <span class="value">R$15,00</span>
-                    </div>
-                </div>
-                <div>
-                    <a href="/produto/granola" class="button btn">Comprar</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- NOSSO DIA-A-DIA -->
-        <div class="grid-x grid-padding-x align-center">
-            <h2 class="topicos">Nosso Dia-a-Dia</h2>
-        </div>
-        <div class="grid-x grid-padding-x text-center daily-grid">
-            <div class="medium-4 large-4 small-12 cell">
-                <figure>
-                    <a>
-                        <img src=".\images\noticia3.jpg" alt="Noticias">
-                    </a>
-                </figure>
-                <div class="content">
-                    <h1>Evento Bazar Natalino</h1>
-                </div>
-                <p>"Venha conferir mais um de nossos eventos, com muita comida e produtos artesanais feitos com qualidade e
-                    carinho..."
-                </p>
-                <div>
-                    <a href=".\views\dia-a-dia.html">
-                        <strong>ver mais</strong>
-                    </a>
-                </div>
-            </div>
-            <div class="medium-4 large-4 small-12 cell">
-                <figure>
-                    <a>
-                        <img src=".\images\noticia.jpg" alt="Noticias">
-                    </a>
-                </figure>
-                <div class="content">
-                    <h1>Poesia e Dança</h1>
-                </div>
-                <p>"Muita alegria e entretenimento com peosias e dança..."</p>
-                <div>
-                    <a href=".\views\dia-a-dia.html">
-                        <strong>ver mais</strong>
-                    </a>
-                </div>
-            </div>
-            <div class="medium-4 large-4 small-12 cell">
-                <figure>
-                    <a>
-                        <img src=".\images\noticia2.jpg" alt="Noticias">
-                    </a>
-                </figure>
-                <div class="content">
-                    <h1>Expedições</h1>
-                </div>
-                <p>"Explorar e conhecer lugares incríveis..."</p>
-                <div>
-                    <a href=".\views\dia-a-dia.html">
-                        <strong>ver mais</strong>
-                    </a>
-                </div>
+    <div id="content">
+        <div class="blue-content text-center">
+            <div>
+                <h2>Quem somos</h2>
             </div>
         </div>
     </div>
