--- a/web/index.html
+++ b/web/index.html
@@ -41,16 +41,21 @@
     </div>
 
     <div id="content">
-        <div class="blue-content text-center">
+        <div class="blue-content grid-padding-x text-center">
             <div>
                 <h2>Quem somos</h2>
+            </div>
+        </div>
+        <div class="white-content grid-padding-x">
+            <div class="small-12 medium-6 cell text-center">
+                <h2 class="pink">Seja um doador</h2>
             </div>
         </div>
     </div>
 
 
     <div class="footer">
-        <div class="grid-x grid-padding-x ">
+        <div class="grid-x grid-padding-x">
             <div class="small-6 cell">
                 <h6>Sobre nós</h6>
             </div>
