--- a/web/index.html
+++ b/web/index.html
@@ -47,8 +47,18 @@
             </div>
         </div>
         <div class="white-content grid-padding-x">
-            <div class="small-12 medium-6 cell text-center">
-                <h2 class="pink">Seja um doador</h2>
+            <div class="grid-x">
+                <div class="small-12 medium-6 cell text-center">
+                    <h2 class="pink">Sócio amigo</h2>
+                </div>
+            </div>
+            <div class="grid-x">
+                <div class="small-3 cell"></div>
+                <div class="small-6 cell">
+                    <h3 class="pink">A Associação Novo Rumo precisa de doações para manter as suas atividades. Quem quiser ser sócio amigo
+                        entre em contato com a Associação.</h3>
+                </div>
+                <div class="small-3 cell"></div>
             </div>
         </div>
     </div>
