--- a/web/index.html
+++ b/web/index.html
@@ -53,13 +53,16 @@
                 </div>
             </div>
             <div class="grid-x">
-                <div class="small-3 cell"></div>
-                <div class="small-6 cell">
-                    <h3 class="pink">A Associação Novo Rumo precisa de doações para manter as suas atividades. Quem quiser ser sócio amigo
-                        entre em contato com a Associação.</h3>
+                <div class="small-4 cell"></div>
+                <div class="small-4 cell text-center">
+                    <h3 class="pink">A Associação Novo Rumo precisa de doações para manter as suas atividades.</h3>
                 </div>
-                <div class="small-3 cell"></div>
+                <div class="small-4 cell"></div>
             </div>
+        </div>
+        <div class="pink-content grid-padding-x">
+            
+            <h2>Evento</h2>
         </div>
     </div>
 
