--- a/web/index.html
+++ b/web/index.html
@@ -69,7 +69,15 @@
                     <h2>Eventos</h2>
                 </div>
                 <div class="small-12 medium-6 cell">
-                    <h5>Localização</h6>
+                    <h6>Localização</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
+                        lorem lectus consectetur velit, non faucibus.</p>
+                    <h6>Descrição</h6>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
+                        luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
+                        convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
+                        mollis.
+                    </p>
                 </div>
             </div>
         </div>
