Melhorando os estilos

--- a/web/index.html
+++ b/web/index.html
@@ -58,21 +58,22 @@
                 <div class="small-4 cell"></div>
                 <div class="small-4 cell text-center quote">
                     <img src="images/idea-icon.png">
-                    <h3>A Associação Novo Rumo precisa de doações para manter as suas atividades.</h3>
+                    <h4>A Associação Novo Rumo precisa de doações para manter as suas atividades.</h4>
                 </div>
                 <div class="small-4 cell"></div>
             </div>
         </div>
         <div class="pink-content">
             <div class="grid-container grid-x">
-                <div class="small-12 medium-6 cell">
-                    <h2>Eventos</h2>
+                <div class="small-12 medium-6 cell text-center">
+                    <img src="/images/event-icon.png"/>
+                    <h3>Eventos</h3>
                 </div>
                 <div class="small-12 medium-6 cell">
-                    <h6>Localização</h6>
+                    <h6 class="text-center">Localização</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
-                    <h6>Descrição</h6>
+                    <h6 class="text-center">Descrição</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
                         luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
                         convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
