Ajustes no texto

--- a/web/index.html
+++ b/web/index.html
@@ -66,14 +66,17 @@
         <div class="pink-content">
             <div class="grid-container grid-x">
                 <div class="small-12 medium-6 cell text-center">
-                    <img src="/images/event-icon.png"/>
+                    <img src="/images/event-icon.png" />
                     <h3>Eventos</h3>
+                    <h4>Bazar
+                        <span class="yellow">Beneficente</span>
+                    </h4>
                 </div>
                 <div class="small-12 medium-6 cell">
-                    <h6 class="text-center">Localização</h6>
+                    <h6 class="yellow text-center">Localização</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquet, ligula a convallis ullamcorper,
                         lorem lectus consectetur velit, non faucibus.</p>
-                    <h6 class="text-center">Descrição</h6>
+                    <h6 class="yellow text-center">Descrição</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris erat nulla, vehicula a nunc quis, porta
                         luctus nisi. Duis id ligula a purus feugiat volutpat eget ut leo. Ut sit amet bibendum eros. Proin
                         convallis eleifend velit. Donec facilisis quis purus ut mollis. Phasellus eget nibh in ex mattis
