--- a/web/index.html
+++ b/web/index.html
@@ -6,16 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="/css/app.min.css">
-    <link rel="stylesheet" href="./css/app-effects.css" async>
-    <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet" async>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet" async>
 </head>
 
 <body>
+    <!-- HEADER -->
     <header id="header" class="topbar-sticky-shrink-header">
         <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like"
             data-size="small" data-show-faces="false" data-share="false"></div>
     </header>
 
+    <!-- MENU -->
     <div data-sticky-container>
         <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
             <div class="top-bar topbar-sticky-shrink">
@@ -42,6 +43,7 @@
         </div>
     </div>
 
+    <!-- BODY -->
     <div id="content">
         <div class="blue-content text-center">
             <div class="grid-container">
@@ -55,12 +57,12 @@
                 </div>
             </div>
             <div class="grid-x">
-                <div class="small-4 cell"></div>
-                <div class="small-4 cell text-center quote">
+                <div class="small-4 cell hide-for-small-only"></div>
+                <div class="small-12 medium-4 cell text-center quote">
                     <img src="images/idea-icon.png">
                     <h4>A Associação Novo Rumo precisa de doações para manter as suas atividades.</h4>
                 </div>
-                <div class="small-4 cell"></div>
+                <div class="small-4 cell hide-for-small-only"></div>
             </div>
         </div>
         <div class="pink-content">
@@ -87,7 +89,7 @@
         </div>
     </div>
 
-
+    <!-- FOOTER -->
     <div class="footer">
         <div class="grid-container">
             <div class="grid-x">
