ajustes no posicionamento

--- a/web/index.html
+++ b/web/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="white-content">
             <div class="grid-container">
-                <div class="small-12 medium-6 cell">
+                <div class="small-12 medium-6 cell text-center">
                     <h2>Sócio amigo</h2>
                 </div>
             </div>
