--- a/web/index.html
+++ b/web/index.html
@@ -58,12 +58,11 @@
                     </div>
                 </div>
                 <div class="grid-x">
-                    <div class="small-4 cell hide-for-small-only"></div>
-                    <div class="small-12 medium-4 cell text-center quote">
+                    <div class="small-2 medium-4 cell"></div>
+                    <div class="small-8 medium-4 cell text-center quote">
                         <img src="images/idea-icon.png">
                         <h4>A Associação Novo Rumo precisa de doações para manter as suas atividades.</h4>
                     </div>
-                    <div class="small-4 cell hide-for-small-only"></div>
                 </div>
                 <div class="grid-x">
                     <div class="small-8 medium-8 cell hide-for-small-only"></div>
